--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -12,163 +12,163 @@
     android:orientation="vertical">
 
     <ScrollView
+        android:id="@+id/scrollView6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView6" >
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/adnametxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/adnametxt"
                     android:textColor="@color/colorPrimary" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="right">
+                    android:gravity="right"
+                    android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/logtxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Logout!"
-                        android:id="@+id/logtxt"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Select Operation"
-                    android:id="@+id/textView10"
-                    android:textSize="35dp"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="35dp" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="35dp" />
+                android:layout_height="35dp"
+                android:orientation="horizontal" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center"
-                android:weightSum="1" >
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <TextView
+                    android:id="@+id/textView20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Enter quizId:-"
-                    android:id="@+id/textView20"
-                    android:textStyle="bold"
-                    android:textColor="#1d1c1c" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#1d1c1c"
+                    android:textStyle="bold" />
 
                 <Spinner
+                    android:id="@+id/qidspinner"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/qidspinner" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="35dp" />
+                android:layout_height="35dp"
+                android:orientation="horizontal" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/addbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add question"
-                    android:id="@+id/addbtn" />
+                    android:text="Add question" />
 
                 <Button
+                    android:id="@+id/dltbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Delete question"
-                    android:id="@+id/dltbtn" />
+                    android:text="Delete question" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="35dp" />
+                android:layout_height="35dp"
+                android:orientation="horizontal" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/updbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Update question"
-                    android:id="@+id/updbtn" />
+                    android:text="Update question" />
 
                 <Button
+                    android:id="@+id/viewbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View question"
-                    android:id="@+id/viewbtn" />
+                    android:text="View question" />
             </LinearLayout>
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/exrabtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Extra activities"
-                    android:id="@+id/exrabtn" />
+                    android:text="Extra activities" />
 
                 <Button
+                    android:id="@+id/remainingtbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="remaining activities"
-                    android:id="@+id/remainingtbtn" />
+                    android:text="remaining activities" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/qtxtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/qtxtv"
                     android:textColor="#121111"
                     android:textSize="25dp" />
             </LinearLayout>
