--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -11,6 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="450dp">
         <RadioButton
+            android:id="@+id/activity_listview_bt"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:gravity="left|center_vertical"
+            android:text="List View"/>
+
+        <RadioButton
             android:id="@+id/activity_view_pager_bt"
             android:layout_width="match_parent"
             android:layout_height="50dp"
