--- a/app/src/main/res/layout/activity_quiz_details.xml
+++ b/app/src/main/res/layout/activity_quiz_details.xml
@@ -169,7 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Let&apos;s Play!"
+                    android:text="Lets Play!"
                     android:id="@+id/textView24"
                     android:textSize="30dp"
                     android:textColor="#FF34AE0F"/>
