--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -9,7 +9,7 @@
         android:id="@+id/activity_service_tv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="Waiting"
+        android:text="hello"
         android:textSize="30sp"
         android:gravity="center"
         android:layout_alignParentTop="true" />
