--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -8,7 +8,7 @@
         android:id="@+id/dialog_custom_tv"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="DialogTitle"
+        android:text="Waterfalls "
         android:gravity="center"
         android:background="@android:color/black"
         android:textSize="30dp"
@@ -18,7 +18,7 @@
         android:layout_height="350dp"
         android:layout_below="@+id/dialog_custom_tv"
         android:scaleType="centerCrop"
-        android:src="@mipmap/panda"/>
+        android:src="@mipmap/panda1"/>
 <Button
     android:id="@+id/dialog_custom_ok"
     android:layout_width="match_parent"
